# python-requests

./: .gitignore  .pre-commit-config.yaml  DEVELOPMENT.md  Justfile  README.md  package-lock.json  package.json  pyproject.toml  tox.ini
.github/: dependabot.yml
.github/workflows/: CI.yml  ci.yaml  release.yml  schedule-update-actions.yml
openmeteo_requests/: Client.py  __init__.py  client.py  exceptions.py
tests/: conftest.py  test_clients.py  test_methods.py
