[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "openmeteo_requests"
version = "0.1.0"
authors = [{ name = "Patrick Zippenfenig", email = "info@open-meteo.com" }]
description = "Open-Meteo Python Library"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
keywords = ["python", "open", "meteo", "weather", "client"]
dependencies = [
    "niquests>=3.14.1",
    "openmeteo-sdk>=1.20.1",
]

[project.urls]
Documentation = "https://github.com/open-meteo/python-requests/tree/main#readme"
Repository = "https://github.com/open-meteo/python-requests"
"Issue Tracker" = "https://github.com/open-meteo/python-requests/issues"

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
lint = [
    "bandit>=1.8.5",
    "mypy>=1.16.1",
    "ruff>=0.12.1",
]
test = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
]

[tool.bandit]
exclude_dirs = ["build", "dist", "tests"]
number = 4
recursive = true
targets = "openmeteo_requests"

[tool.coverage.run]
source_dirs = ["openmeteo_requests"]
omit = ["tests"]
branch = true

[tool.coverage.report]
fail_under = 80

[tool.mypy]
python_version = "3.9"
files = ["openmeteo_requests"]
ignore_missing_imports = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "8.4"
testpaths = ["tests"]
addopts = [
    "-xq",
    "--cov=openmeteo_requests",
    "--cov-report=xml:coverage.xml",
    # "--cov-append",
]
markers = [
    "integration: marks as integration test",
    "notebooks: marks as notebook test",
    "gpu: marks as gpu test",
    "spark: marks tests which need Spark",
    "slow: marks tests as slow",
    "unit: fast offline tests",
]
# pytest-asyncio
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

[tool.ruff]
line-length = 80
indent-width = 4
target-version = "py39"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"

[tool.ruff.lint]
select = [
    "ASYNC",  # asyn
    "E",  # 
    "F",  # 
    "I",  # isort
    "Q",  # flake-quotes
    "S",  # bandit
    "UP",  # pyupgrade
]
ignore = []

fixable = [
    "ALL",
    "I",  # isort
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "E501",  # line-too-long
    "S101", # use-of-assert-detected
]
